--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap-daterangepicker": "^4.1.0",
     "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
+    "react-intercom": "^1.0.15",
     "react-lazyload": "^2.6.7",
     "react-redux": "^7.2.0",
     "react-select": "^3.1.0",
